# revodata-gen-ai-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  frontend-guide.md  pyproject.toml  requirements.txt
architectures/retrieval-augmented-generation/: README.MD
architectures/retrieval-augmented-generation/0-creating-the-vectore-store/: 0-setup.ipynb  1-pdf-parser.ipynb  1B-pdf-parser-late-chunking.ipynb  README.md
architectures/retrieval-augmented-generation/1-conversational-rag/: ConversationalRAG.ipynb  ConversationalRAG.py  README.md
architectures/retrieval-augmented-generation/2-conversational-rag-custom-responses/: ConversationalRAGCustom.ipynb  ConversationalRAGCustom.py  README.md
architectures/roadmap-experiments/: AdaptiveRAG.ipynb  AdaptiveRAG.py  ChatAgentLangGraph.ipynb  ChatAgentLangGraph.py  ChatAgentTools.ipynb  ChatAgentTools.py  ChatModel.ipynb  ChatModel.py  Conversational.py  ConversationalRAGComplexLangGraph.py  ConverstaionalRAGComplexLangGraph.ipynb  DSPy.ipynb  LangChain.ipynb  LangChain.py  PyFuncLangGraph.ipynb  PyFuncLangGraph.py  StructuredOutputs.ipynb
assets/: converstional_rag_custom_demo.mov  converstional_rag_demo.mov  no_rag_demo.mov
components/embeddings/: SentenceTransformersEmbeddings.ipynb  TransformersEmbeddings.ipynb
components/large-language-models/: TransformersTextGeneration.ipynb
components/other/: lamafy-qwen-model.ipynb
components/rerankers/: PyFuncReranker.ipynb  PyFuncReranker.py
finetuning/: finetuning-embeddings.ipynb
(+3 files in other folders)
